--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SG Bus Arrival</string>
     <string name="title_favorites">Favorites</string>
     <string name="title_search">Search</string>
-    <string name="search_hint">Search by bus stop code</string>
+    <string name="search_hint">Search by bus stop code, bus number and places</string>
     <string name="favorite_button_content_description">Add to Favorites</string>
     <string name="clear_button_content_description">Clear search text</string>
 </resources>
