--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="favorite_button_content_description">Add to Favorites</string>
     <string name="title_favorites">Favorites</string>
     <string name="title_search">Search</string>
-    <string name="search_hint">Search by bus stop code, bus stop name and bus service</string>
+    <string name="search_hint">Search bus stop, address and bus no.</string>
 </resources>
